スライドショー修正

--- a/top.html
+++ b/top.html
@@ -77,35 +77,47 @@
         <div class="news_area" id="news">
             <img class="news_img absolute" src=".\img\02_sintyakuimage.png">
             <div class="news-contents">
-                <div class="news_panel">新着情報</div>
-                <div class="swiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="slide-content">
-                                <h1>Slide Title 01</h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur</p>
-                                <div class="caption">caption 01</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="slide-content">
-                                <h2>Slide Title 02</h2>
-                                <p>Ipsa, quis ex repudiandae eum </p>
-                                <div class="caption">caption 02</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="slide-content">
-                                <h3>Slide Title 03</h3>
-                                <p>Ullam rerum quasi libero esse </p>
-                                <div class="caption">caption 03</div>
-                            </div>
-                        </div>
-                    </div><!-- end of .swiper-wrapper -->
-                    <div class="swiper-pagination swiper-pagination-white"></div>
+                
+                <div class="flex_box">
                     <div class="swiper-button-prev"></div>
+                    <div>
+                        <div class="news_panel">新着情報</div>
+                        <div class="swiper">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="slide-content">
+                                        <h1>令和元年秋基本情報資格取得に向けて</h1>
+                                        <p>年二回開催される基本情報技術者試験。
+                                            今年の秋は10月20日が試験日です。
+                                            
+                                            エルの社員たちも資格取得に向けて動き出しました。
+                                            隔週の土曜日はみんなで会社に集まって、
+                                            資格を持っている先輩たちに教えてもらいながら勉強しています。</p>
+                                        <div class="caption">caption 01</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="slide-content">
+                                        <h2>Slide Title 02</h2>
+                                        <p>Ipsa, quis ex repudiandae eum </p>
+                                        <div class="caption">caption 02</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="slide-content">
+                                        <h3>Slide Title 03</h3>
+                                        <p>Ullam rerum quasi libero esse </p>
+                                        <div class="caption">caption 03</div>
+                                    </div>
+                                </div>
+                            </div><!-- end of .swiper-wrapper -->
+                            <div class="swiper-pagination swiper-pagination-white"></div>
+
+                        </div><!-- end of .swiper -->
+                    </div>
+
                     <div class="swiper-button-next"></div>
-                </div><!-- end of .swiper -->
+                </div>
 
 
             </div>
