--- a/top.html
+++ b/top.html
@@ -15,7 +15,7 @@
 <body>
     <!-- ヘッダー -->
     <header>
-        <div class="header padding" id="home">
+        <div class="header margin" id="home">
             <div class="logo">
                 <p class="logo_text">el.</p>
             </div>
@@ -77,7 +77,7 @@
         <div class="news_area" id="news">
             <img class="news_img absolute" src=".\img\02_sintyakuimage.png">
             <div class="news-contents">
-                
+
                 <div class="flex_box">
                     <div class="swiper-button-prev"></div>
                     <div>
@@ -87,12 +87,10 @@
                                 <div class="swiper-slide">
                                     <div class="slide-content">
                                         <h1>令和元年秋基本情報資格取得に向けて</h1>
-                                        <p>年二回開催される基本情報技術者試験。
-                                            今年の秋は10月20日が試験日です。
-                                            
-                                            エルの社員たちも資格取得に向けて動き出しました。
-                                            隔週の土曜日はみんなで会社に集まって、
-                                            資格を持っている先輩たちに教えてもらいながら勉強しています。</p>
+                                        <p>年二回開催される基本情報技術者試験。 </p>
+                                        <p>今年の秋は10月20日が試験日です。 </p>
+                                        <p>エルの社員たちも資格取得に向けて動き出しました。</p>
+                                        <p>隔週の土曜日はみんなで会社に集まって、資格を持っている先輩たちに教えてもらいながら勉強しています。</p>
                                         <div class="caption">caption 01</div>
                                     </div>
                                 </div>
@@ -127,41 +125,49 @@
         <!-- /新着情報 -->
 
         <!-- 採用情報 -->
-        <div class="recruit_area padding" id="recruit">
-            <p class="container">採用情報</p>
-            <p class="default-fonts">導入研修制度あり、未経験の方でもプログラミングを習得することが出来ます。</p>
-            <p class="default-fonts">まずは「ITってなに？」「システム開発ってどんなことをするの？」ということからスタート。</p>
-            <p class="default-fonts">その後プログラミングの基礎を学習し、自身でスケジュールを立てながらWebシステムを作成していきます。</p>
-            <p class="default-fonts">入社1～2ヶ月は研修期間としてカリキュラムを用意しています。</p>
-            <p class="title-fonts">カリキュラム内容</p>
-            <ul>
-                <li>C#</li>
-                <li>Java</li>
-                <li>javascript</li>
-                <li>SQL</li>
-                <li>Github</li>
-            </ul>
-            <br>
-            <p class="default-fonts">弊社が意識しているのは、目的をもって手を動かすことを意識しています。</p>
-            <p class="default-fonts">また、研修での理解度や本人の希望に合わせながら適した研修プログラムを変更していきます。</p>
-            <p class="title-fonts">研修後の具体的な業務</p>
-            <ul>
-                <li>コンサルティング</li>
-                <li>サンプルテキスト</li>
+        <div class="recruit_area margin" id="recruit">
+            <div class="contents">
+                <p class="container">採用情報</p>
+                <div class="p_block">
+                    <p class="default-fonts">導入研修制度あり、未経験の方でもプログラミングを習得することが出来ます。</p>
+                    <p class="default-fonts">まずは「ITってなに？」「システム開発ってどんなことをするの？」ということからスタート。</p>
+                    <p class="default-fonts">その後プログラミングの基礎を学習し、自身でスケジュールを立てながらWebシステムを作成していきます。</p>
+                    <p class="default-fonts">入社1～2ヶ月は研修期間としてカリキュラムを用意しています。</p>
+                </div>
+                <div class="p_block">
+                    <p class="title-fonts">カリキュラム内容</p>
+                    <ul>
+                        <li>C#</li>
+                        <li>Java</li>
+                        <li>javascript</li>
+                        <li>SQL</li>
+                        <li>Github</li>
+                    </ul>
+                    <br>
+                    <p class="default-fonts">弊社が意識しているのは、目的をもって手を動かすことを意識しています。</p>
+                    <p class="default-fonts">また、研修での理解度や本人の希望に合わせながら適した研修プログラムを変更していきます。</p>
+                </div>
+                <div class="p_block">
+                    <p class="title-fonts">研修後の具体的な業務</p>
+                    <ul>
+                        <li>コンサルティング</li>
+                        <li>サンプルテキスト</li>
 
-                <li>要件定義</li>
-                <li>設計</li>
-                <li>コーディング</li>
-                <li>プロジェクトリーダー</li>
-                <li>テスト</li>
-            </ul>
-            <br>
-            <p class="default-fonts">設計書を書いたり、コンサルティングから参加している場合は大枠の仕様から決めたり、プログラミングをしたり。</p>
-            <p class="default-fonts">お任せする業務については、その人のスキルや適性に応じて変わります。</p>
-            <p class="default-fonts">例えば、「まだスキルに自信がない・・・」という方は、難易度の低いテスト工程から始めます。</p>
-            <p class="small-fonts">
-                ※現在、在庫管理システムや生産管理システムだけでなく、「機械にセンサーを設置してデータを採取するシステム」などの開発実績もあります。 生産現場の効率化を実現しました。
-            </p>
+                        <li>要件定義</li>
+                        <li>設計</li>
+                        <li>コーディング</li>
+                        <li>プロジェクトリーダー</li>
+                        <li>テスト</li>
+                    </ul>
+                    <br>
+                    <p class="default-fonts">設計書を書いたり、コンサルティングから参加している場合は大枠の仕様から決めたり、プログラミングをしたり。</p>
+                    <p class="default-fonts">お任せする業務については、その人のスキルや適性に応じて変わります。</p>
+                    <p class="default-fonts">例えば、「まだスキルに自信がない・・・」という方は、難易度の低いテスト工程から始めます。</p>
+                    <p class="small-fonts">
+                        ※現在、在庫管理システムや生産管理システムだけでなく、「機械にセンサーを設置してデータを採取するシステム」などの開発実績もあります。 生産現場の効率化を実現しました。
+                    </p>
+                </div>
+            </div>
             <div class="recruit_info">
                 <div class="column">
                     <div class="treatment">
@@ -169,9 +175,11 @@
                             <p>募集資格</p>
                         </div>
                         <div class="t_text">
-                            <p>学歴不問&lt;未経験、第二新卒歓迎&gt;</p>
+                            <p class="bold">学歴不問&lt;未経験、第二新卒歓迎&gt;</p>
+                            <br>
                             <p>楽しみながら手に職をつけていきたい方。</p>
                             <p>プログラミングの経験はもちろん、パソコンの打ち方を知らない、電源がどこにあるのかも分からないという方も歓迎しております。</p>
+                            <br>
                             <p>◎IT業界の経験はもちろん、社会人経験、ブランクも問いません。</p>
                         </div>
                     </div>
@@ -180,10 +188,11 @@
                             <p>基本給</p>
                         </div>
                         <div class="t_text">
-                            <p>155,700円（2016年実績）</p>
-                            <p>&lt;モデル月収例&gt;</p>
-                            <p>初任給　181,200円</p>
-                            <p>（基本給155,700円＋年齢給4,000円＋在籍給1,500円＋職能給20,000円）</p>
+                            <p class="bold">155,700円（2016年実績）</p>
+                            <br>
+                            <p class="para">&lt;モデル月収例&gt;</p>
+                            <p class="bold">初任給　181,200円</p>
+                            <p class="small">（基本給155,700円＋年齢給4,000円＋在籍給1,500円＋職能給20,000円）</p>
                         </div>
                     </div>
                     <div class="treatment">
@@ -191,11 +200,12 @@
                             <p>勤務地</p>
                         </div>
                         <div class="t_text">
-                            <p>&lt;各プロジェクト先&gt;</p>
+                            <p class="para">&lt;各プロジェクト先&gt;</p>
                             <p>愛知県（名古屋・三河・尾張）</p>
-                            <p>&lt;本社&gt;</p>
+                            <p class="para">&lt;本社&gt;</p>
                             <p>愛知県名古屋市中区大須3-31-22　シーフォレスト２　２Ｆ</p>
-                            <p>※地図情報は別ページの「会社情報」にて記載</p>
+                            <br>
+                            <p class="small">※地図情報は別ページの「会社情報」にて記載</p>
                         </div>
                     </div>
                     <div class="treatment">
@@ -210,9 +220,9 @@
                             <li class="list">住宅手当（月２万円　※会社から２ｋｍ圏内の在住者）</li>
                             <li class="list">各種研修制度</li>
                             <li class="list">書籍購入費全額負担</li>
-                            <p>※従業員の学習を促進するため、書籍購入を会社の補助で購入する制度</p>
+                            <p class="small">※従業員の学習を促進するため、書籍購入を会社の補助で購入する制度</p>
                             <li class="list">社内イベント(旅行、BBQ、忘年会、勉強会、etc…)</li>
-                            <p>※ 月１回社内で開催されるピザパーティがあります。ソフトドリンクだけでなくお酒も飲みつつ親睦を深めています。</p>
+                            <p class="small">※ 月１回社内で開催されるピザパーティがあります。ソフトドリンクだけでなくお酒も飲みつつ親睦を深めています。</p>
 
                         </div>
                     </div>
@@ -223,7 +233,7 @@
                             <p>職務の目的</p>
                         </div>
                         <div class="t_text">
-                            <p>IT技術を用いて社会に必要とされる企業となる。</p>
+                            <p class="bold">IT技術を用いて社会に必要とされる企業となる。</p>
                         </div>
                     </div>
                     <div class="treatment">
@@ -264,7 +274,7 @@
                         </div>
                         <div class="t_text">
                             <p>週休2日​制</p>
-                            <p>※プロジェクト先によっては休日出勤有り</p>
+                            <p class="small">※プロジェクト先によっては休日出勤有り</p>
                         </div>
                     </div>
                     <div class="treatment">
@@ -296,27 +306,30 @@
                     </div>
                 </div>
             </div>
+
         </div>
         <!-- /採用情報 -->
 
         <!-- 行動指針 -->
-        <div class="action_agenda padding">
+        <div class="action_agenda margin">
             <p class="container">行動指針</p>
-            <p class="guidelines_title"> 〇「正しさ」と「楽しさ」の両方を追求する</p>
-            <p class="guidelines_explanation">
-                人として・社会人として正しい行動をとり、仕事で自分の「楽しい」と思えることに対してがむしゃらに頑張れることは、
-                会社にとっても働く個人に対しても充実したものになると考えております。
-            <p class="guidelines_title"> 〇「意志」を持って行動する</p>
-            <p class="guidelines_explanation">
-                自分のやることに対して意思を持ち責任感のある行動をとることを常に意識し努力します。
-                例え、上司であろうが「こうしたらもっと良くなる」などのことがあれば
-                素直に言えるような環境であることを目指しております。</p>
-            <p class="guidelines_title"> 〇 相手のことを「キチン」と考え、自分のことも「キチン」と考える</p>
-            <p class="guidelines_explanation">
-                相手のことを考え行動するのは良いことです。
-                しかし、自分のことも知っておくことで相手により満足や信頼関係を築けることに繋がると
-                信じ自分のこともちゃんと考えて行動をとることが大切だと考えております。
-            </p>
+            <div class="contents">
+                <p class="guidelines_title"> 〇「正しさ」と「楽しさ」の両方を追求する</p>
+                <p class="guidelines_explanation">
+                    人として・社会人として正しい行動をとり、仕事で自分の「楽しい」と思えることに対してがむしゃらに頑張れることは、
+                    会社にとっても働く個人に対しても充実したものになると考えております。
+                <p class="guidelines_title"> 〇「意志」を持って行動する</p>
+                <p class="guidelines_explanation">
+                    自分のやることに対して意思を持ち責任感のある行動をとることを常に意識し努力します。
+                    例え、上司であろうが「こうしたらもっと良くなる」などのことがあれば
+                    素直に言えるような環境であることを目指しております。</p>
+                <p class="guidelines_title"> 〇 相手のことを「キチン」と考え、自分のことも「キチン」と考える</p>
+                <p class="guidelines_explanation">
+                    相手のことを考え行動するのは良いことです。
+                    しかし、自分のことも知っておくことで相手により満足や信頼関係を築けることに繋がると
+                    信じ自分のこともちゃんと考えて行動をとることが大切だと考えております。
+                </p>
+            </div>
         </div>
         <!-- /行動指針 -->
 
@@ -334,6 +347,7 @@
                     </div>
 
                 </div>
+                <div class="test555"></div>
                 <div class="folw_box">
                     <div class="step_background">
                         <p class="step">step<br>2</p>
@@ -343,6 +357,7 @@
                         <p class="flow_text">会社説明会</p>
                     </div>
                 </div>
+                <div class="test555"></div>
                 <div class="folw_box">
                     <div class="step_background">
                         <p class="step">step<br>3</p>
@@ -352,6 +367,7 @@
                         <p class="flow_text">面接１回</p>
                     </div>
                 </div>
+                <div class="test555"></div>
                 <div class="folw_box">
                     <div class="step_background">
                         <p class="step">step<br>4</p>
@@ -367,7 +383,7 @@
 
 
         <!-- 会社概要 -->
-        <div class="padding " id="corp">
+        <div class="margin " id="corp">
             <p class="container">会社概要</p>
 
 
@@ -415,7 +431,7 @@
                         </tr>
                     </table>
                 </div>
-                <div class="column">
+                <div class="column width">
                     <div class="iframe">
                         <!-- <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d815.4848425552003!2d136.905191329222!3d35.15813279876996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600370cbaf1149a7%3A0xc8e9b9a1fdbaabcd!2z44CSNDYwLTAwMTEg5oSb55-l55yM5ZCN5Y-k5bGL5biC5Lit5Yy65aSn6aCI77yT5LiB55uu77yT77yR4oiS77yS77yT!5e0!3m2!1sja!2sjp!4v1632126307214!5m2!1sja!2sjp"
