--- a/top.html
+++ b/top.html
@@ -337,7 +337,7 @@
         <div class="flow_area">
             <div class="container ">採用スケジュール</div>
             <div class="flow_bar">
-                <div class="folw_box">
+                <div class="flow_box">
                     <div class="step_background">
                         <p class="step">step<br>1</p>
                     </div>
@@ -347,8 +347,8 @@
                     </div>
 
                 </div>
-                <div class="test555"></div>
-                <div class="folw_box">
+                <div class="triangle"></div>
+                <div class="flow_box">
                     <div class="step_background">
                         <p class="step">step<br>2</p>
                     </div>
@@ -357,8 +357,8 @@
                         <p class="flow_text">会社説明会</p>
                     </div>
                 </div>
-                <div class="test555"></div>
-                <div class="folw_box">
+                <div class="triangle"></div>
+                <div class="flow_box">
                     <div class="step_background">
                         <p class="step">step<br>3</p>
                     </div>
@@ -367,8 +367,8 @@
                         <p class="flow_text">面接１回</p>
                     </div>
                 </div>
-                <div class="test555"></div>
-                <div class="folw_box">
+                <div class="triangle"></div>
+                <div class="flow_box">
                     <div class="step_background">
                         <p class="step">step<br>4</p>
                     </div>
@@ -488,7 +488,7 @@
         </small>
     </footer>
     <!-- /フッター -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="./js/slideshow.js"></script>
 </body>
 
