--- a/top.html
+++ b/top.html
@@ -44,7 +44,7 @@
         <!-- トップ -->
         <div class="top_area">
             <img class="top_img" src=".\img\01_topimage.png">
-            <p class="top_text">texttexttexttexttexttexttexttexttexttexttexttexttext</p>
+            <p class="top_text"><span class="printf">printf</span><span class="kakko">(</span><span class="string">"Hello,World!!"</span><span class="kakko">)</span></p>
         </div>
         <!-- /トップ -->
 
@@ -92,14 +92,16 @@
                                 <div class="swiper-slide">
                                     <div class="slide-content">
                                         <div class="testtest">
-                                        <div class="news_panel"><p>新着情報</p></div>
-                                        <h1>令和元年秋基本情報資格取得に向けて</h1>
-                                        <p class="slide-p">年二回開催される基本情報技術者試験。 </p>
-                                        <p class="slide-p">今年の秋は10月20日が試験日です。 </p>
-                                        <p class="slide-p">エルの社員たちも資格取得に向けて動き出しました。</p>
-                                        <p class="slide-p">隔週の土曜日はみんなで会社に集まって、資格を持っている先輩たちに教えてもらいながら勉強しています。</p>
-                                        <div class="caption">caption 01</div>
-                                    </div>
+                                            <div class="news_panel">
+                                                <p>新着情報</p>
+                                            </div>
+                                            <h1>令和元年秋基本情報資格取得に向けて</h1>
+                                            <p class="slide-p">年二回開催される基本情報技術者試験。 </p>
+                                            <p class="slide-p">今年の秋は10月20日が試験日です。 </p>
+                                            <p class="slide-p">エルの社員たちも資格取得に向けて動き出しました。</p>
+                                            <p class="slide-p">隔週の土曜日はみんなで会社に集まって、資格を持っている先輩たちに教えてもらいながら勉強しています。</p>
+                                            <div class="caption">caption 01</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -116,10 +118,12 @@
                                         <div class="caption">caption 03</div>
                                     </div>
                                 </div>
-                            </div><!-- end of .swiper-wrapper -->
+                            </div>
+                            <!-- end of .swiper-wrapper -->
                             <div class="swiper-pagination swiper-pagination-white"></div>
 
-                        </div><!-- end of .swiper -->
+                        </div>
+                        <!-- end of .swiper -->
                     </div>
 
                     <div class="swiper-button-next"></div>
@@ -127,7 +131,8 @@
 
 
             </div>
-            <img class="news_img" src=".\img\02_sintyakuimage.png"><!-- 高さ調整用 -->
+            <img class="news_img" src=".\img\02_sintyakuimage.png">
+            <!-- 高さ調整用 -->
         </div>
 
         <!-- /新着情報 -->
@@ -171,7 +176,7 @@
                     <p class="default-fonts">設計書を書いたり、コンサルティングから参加している場合は大枠の仕様から決めたり、プログラミングをしたり。</p>
                     <p class="default-fonts">お任せする業務については、その人のスキルや適性に応じて変わります。</p>
                     <p class="default-fonts">例えば、「まだスキルに自信がない・・・」という方は、難易度の低いテスト工程から始めます。</p>
-                    <p class="small-fonts">
+                    <p class="default-fonts">
                         ※現在、在庫管理システムや生産管理システムだけでなく、「機械にセンサーを設置してデータを採取するシステム」などの開発実績もあります。 生産現場の効率化を実現しました。
                     </p>
                 </div>
@@ -298,8 +303,12 @@
                             <p>教育制度</p>
                         </div>
                         <div class="t_text">
-                            <p>１~２ヶ月の研修以外、土曜日を使って任意参加の勉強会を開催しております。『ＡＢＣ』という名前の勉強会は、「好きなこと」「楽しいこと」「スキルアップできること」を参加者が決めて学べる勉強会です。月に１度、５時間ほどお菓子を食べながらやっています。前回は全６回でTwitterのような簡易SNSを作れるようになりました。今はラズベリーパイを使ったシステムづくりをしています。それ以外にも、年１回以上、キャリアアップ勉強会を実施しています。
-                            </p>
+                            <p>１~２ヶ月の研修以外、土曜日を使って任意参加の勉強会を開催しております。</p>
+                            <p>『ＡＢＣ』という名前の勉強会は、「好きなこと」「楽しいこと」「スキルアップできること」を参加者が決めて学べる勉強会です。</p>
+                            <p>月に１度、５時間ほどお菓子を食べながらやっています。</p>
+                            <p>前回は全６回でTwitterのような簡易SNSを作れるようになりました。</p>
+                            <p>今はラズベリーパイを使ったシステムづくりをしています。</p>
+                            <p>それ以外にも、年１回以上、キャリアアップ勉強会を実施しています。</p>
                         </div>
                     </div>
                     <div class="treatment">
@@ -307,8 +316,7 @@
                             <p>働く仲間</p>
                         </div>
                         <div class="t_text">
-                            <p>株式会社エルには前職で、IT系の仕事をしていた社員だけではなく、
-                                スポーツトレーナー、アパレルスタッフ、飲食店店員、ゲームセンターのスタッフなど様々な職種の社員が所属しています。最近では、神がかり的なストライクショットを決めて見事プロゲーマーになった社員もいます。
+                            <p>株式会社エルには前職で、IT系の仕事をしていた社員だけではなく、 スポーツトレーナー、アパレルスタッフ、飲食店店員、ゲームセンターのスタッフなど様々な職種の社員が所属しています。最近では、神がかり的なストライクショットを決めて見事プロゲーマーになった社員もいます。
                             </p>
                         </div>
                     </div>
@@ -324,19 +332,15 @@
             <div class="contents">
                 <p class="guidelines_title"> 〇「正しさ」と「楽しさ」の両方を追求する</p>
                 <p class="guidelines_explanation">
-                    人として・社会人として正しい行動をとり、仕事で自分の「楽しい」と思えることに対してがむしゃらに頑張れることは、
-                    会社にとっても働く個人に対しても充実したものになると考えております。
-                <p class="guidelines_title"> 〇「意志」を持って行動する</p>
-                <p class="guidelines_explanation">
-                    自分のやることに対して意思を持ち責任感のある行動をとることを常に意識し努力します。
-                    例え、上司であろうが「こうしたらもっと良くなる」などのことがあれば
-                    素直に言えるような環境であることを目指しております。</p>
-                <p class="guidelines_title"> 〇 相手のことを「キチン」と考え、自分のことも「キチン」と考える</p>
-                <p class="guidelines_explanation">
-                    相手のことを考え行動するのは良いことです。
-                    しかし、自分のことも知っておくことで相手により満足や信頼関係を築けることに繋がると
-                    信じ自分のこともちゃんと考えて行動をとることが大切だと考えております。
-                </p>
+                    人として・社会人として正しい行動をとり、仕事で自分の「楽しい」と思えることに対してがむしゃらに頑張れることは、 会社にとっても働く個人に対しても充実したものになると考えております。
+                    <p class="guidelines_title"> 〇「意志」を持って行動する</p>
+                    <p class="guidelines_explanation">
+                        自分のやることに対して意思を持ち責任感のある行動をとることを常に意識し努力します。 例え、上司であろうが「こうしたらもっと良くなる」などのことがあれば 素直に言えるような環境であることを目指しております。
+                    </p>
+                    <p class="guidelines_title"> 〇 相手のことを「キチン」と考え、自分のことも「キチン」と考える</p>
+                    <p class="guidelines_explanation">
+                        相手のことを考え行動するのは良いことです。 しかし、自分のことも知っておくことで相手により満足や信頼関係を築けることに繋がると 信じ自分のこともちゃんと考えて行動をとることが大切だと考えております。
+                    </p>
             </div>
         </div>
         <!-- /行動指針 -->
@@ -350,7 +354,7 @@
                         <p class="step">step<br>1</p>
                     </div>
                     <div class="svg_background">
-                        <img class="svg" src=".\img\レンチ＆ドライバーの設定アイコン.svg" alt="My Happy SVG" />
+                        <img class="svg" src=".\img\05_document.svg" alt="My Happy SVG" />
                         <p class="flow_text" style="white-space:nowrap;">履歴書による書類選考</p>
                     </div>
 
@@ -361,7 +365,7 @@
                         <p class="step">step<br>2</p>
                     </div>
                     <div class="svg_background">
-                        <img class="svg" src=".\img\レンチ＆ドライバーの設定アイコン.svg" alt="My Happy SVG" />
+                        <img class="svg" src=".\img\06_company.svg" alt="My Happy SVG" />
                         <p class="flow_text">会社説明会</p>
                     </div>
                 </div>
@@ -371,7 +375,7 @@
                         <p class="step">step<br>3</p>
                     </div>
                     <div class="svg_background">
-                        <img class="svg" src=".\img\レンチ＆ドライバーの設定アイコン.svg" alt="My Happy SVG" />
+                        <img class="svg" src=".\img\07_meeting.svg" alt="My Happy SVG" />
                         <p class="flow_text">面接１回</p>
                     </div>
                 </div>
@@ -381,7 +385,7 @@
                         <p class="step">step<br>4</p>
                     </div>
                     <div class="svg_background">
-                        <img class="svg" src=".\img\レンチ＆ドライバーの設定アイコン.svg" alt="My Happy SVG" />
+                        <img class="svg" src=".\img\08_goal.svg" alt="My Happy SVG" />
                         <p class="flow_text">内定！</p>
                     </div>
                 </div>
@@ -400,14 +404,12 @@
                     <table class="table">
                         <tr>
                             <th class="right">会社名</th>
-                            <td>株式会社<br>
-                                el Co.,Ltd.</td>
+                            <td>株式会社<br> el Co.,Ltd.</td>
                         </tr>
                         <tr>
                             <th class="right">所在地</th>
-                            <td>〒460-0011<br>
-                                愛知県名古屋市中区大須三丁目31-22<br>
-                                シーフォレスト2 2F</td>
+                            <td>〒460-0011<br> 愛知県名古屋市中区大須三丁目31-22
+                                <br> シーフォレスト2 2F</td>
                         </tr>
                         <tr>
                             <th class="right">設立</th>
@@ -423,10 +425,10 @@
                         </tr>
                         <tr>
                             <th class="right">事業</th>
-                            <td>ITコンサルティング事業<br>
-                                ソフトウェア開発事業<br>
-                                webサービス事業<br>
-                                技術者派遣事業</td>
+                            <td>ITコンサルティング事業<br> ソフトウェア開発事業
+                                <br> webサービス事業
+                                <br> 技術者派遣事業
+                            </td>
                         </tr>
                         <tr>
                             <th class="right">労働者派遣<br>事業許可番号</th>
@@ -434,8 +436,8 @@
                         </tr>
                         <tr>
                             <th class="right">連絡先</th>
-                            <td>TEL：052-269-9888<br>
-                                FAX：052-269-9889</td>
+                            <td>TEL：052-269-9888<br> FAX：052-269-9889
+                            </td>
                         </tr>
                     </table>
                 </div>
@@ -444,8 +446,7 @@
                         <!-- <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d815.4848425552003!2d136.905191329222!3d35.15813279876996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x600370cbaf1149a7%3A0xc8e9b9a1fdbaabcd!2z44CSNDYwLTAwMTEg5oSb55-l55yM5ZCN5Y-k5bGL5biC5Lit5Yy65aSn6aCI77yT5LiB55uu77yT77yR4oiS77yS77yT!5e0!3m2!1sja!2sjp!4v1632126307214!5m2!1sja!2sjp"
                         allowfullscreen loading="lazy"></iframe> -->
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d815.4848425552003!2d136.905191329222!3d35.15813279876996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x600370cbaf1149a7%3A0xc8e9b9a1fdbaabcd!2z44CSNDYwLTAwMTEg5oSb55-l55yM5ZCN5Y-k5bGL5biC5Lit5Yy65aSn6aCI77yT5LiB55uu77yT77yR4oiS77yS77yT!5e0!3m2!1sja!2sjp!4v1632126307214!5m2!1sja!2sjp"
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d815.4848425552003!2d136.905191329222!3d35.15813279876996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x600370cbaf1149a7%3A0xc8e9b9a1fdbaabcd!2z44CSNDYwLTAwMTEg5oSb55-l55yM5ZCN5Y-k5bGL5biC5Lit5Yy65aSn6aCI77yT5LiB55uu77yT77yR4oiS77yS77yT!5e0!3m2!1sja!2sjp!4v1632126307214!5m2!1sja!2sjp"
                             allowfullscreen loading="lazy"></iframe>
                     </div>
                     <div class="insta_area">
